Fix font-size and make more room for content on mobile

--- a/src/sass/modules/layout.scss
+++ b/src/sass/modules/layout.scss
@@ -13,6 +13,9 @@ $width: (101%*$sections);
 .nb-section{
     vertical-align:top;
     padding:70px 100px 0px 100px;
+    @include respond-to('phone'){
+        padding: 70px 24px 0px 24px;
+    };
     List-style-type:none;
     width: (100%/$sections);
     opacity: 0;
@@ -90,19 +93,19 @@ a{
     color:white;
 }
 p, .nb-text{
-    font-size:18px;
+    font-size:24px;
 }
 li{
-    font-size:25px;
+    font-size:24px;
 }
 h1, .nb-title{
-    font-size:40px;
+    font-size:42px;
 }
 h2, .nb-sub-title{
-    font-size:35px;
+    font-size:32px;
 }
 h3{
-    font-size:30px;
+    font-size:32px;
 }
 h1,h2,h3,h4,h5,p,div{
     &.nb-no-margin{
